@@ -1,3 +1,11 @@
+2002-01-04  Mikhael Goikhman  <migo@homemail.com>
+
+	* FvwmScript/Widgets/MiniScroll.c (EvtMouseMiniScroll):
+	implement auto repeat delay, this fixes duplication
+
+	* FvwmScript/Scripts/FvwmScript-Date:
+	change the maximal possible year from 1999 to 2037
+
 2001-12-31  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmScript/Widgets/PopupMenu.c (EvtMousePopupMenu):
