@@ -15,6 +15,8 @@ Changes in stable release 2.4.5 (not released yet)
 * Fixed unmanaged window when window was mapped/unmapped/mapped too
   fast.
 
+* Fixed MiniScroll's auto repeating in FvwmScript.
+
 Changes in stable release 2.4.4 (16-Dec-2001)
 
 * Minor title drawing fixes.
